# trajectory_generator

./: .gitignore  .gitmodules  CMakeLists.txt  package.xml
include/: factor.h  lqr.h  lqr_ros.h  mainwindow.h  multirotor.h  scribblearea.h  trajectory.h  trajopt_ros.h
launch/: copter_sil.launch
msg/: TrajectoryCommand.msg
params/: multirotor.yaml
python/: plot.py
src/: lqr.cpp  lqr_ros.cpp  main.cpp  mainwindow.cpp  scribblearea.cpp  trajectory.cpp  trajopt_ros.cpp  trajopt_test.cpp
